federated-computation/orchestrator/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestrator-mongodb
spec:
  replicas: 
  selector:
    matchLabels:
      app: orchestrator-mongodb
  template:
    metadata:
      labels:
        app: orchestrator-mongodb
    spec:
      serviceAccountName: app-orchestrator
      containers:
      - name: orchestrator-mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
          - name: data
            mountPath: /data/db
        resources:
          requests:
            cpu: 0.5
            memory: "4Gi"
          limits:
            cpu: 2
            memory: "4Gi"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: orchestrator-mongodb-data
