federated-computation/orchestrator/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-mongodb
spec:
  ports:
  - port: 27017
    target: 27017
    protocol: TCP
    name: api
  selector:
    app: orchestrator-mongodb
