federated-computation/orchestrator/mongodb-websockify-service.yml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-mongodb-websockify
spec:
  selector:
    app: orchestrator-mongodb-websockify
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
