federated-computation/orchestrator/orchestrator-service.yml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator
spec:
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: api
  selector:
    app: orchestrator
