federated-computation/orchestrator/rabbitmq-admin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-rabbitmq-admin
spec:
  ports:
  - port: 15672
    targetPort: 15672
    protocol: TCP
    name: admin
  selector:
    app: orchestrator-rabbitmq
