federated-computation/orchestrator/rabbitmq-service.yml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-rabbitmq
spec:
  ports:
  - port: 5671
    target: 5671
    protocol: TCP
    name: api
  - port: 15672
    target: 15672
    protocol: TCP
    name: management
  selector:
    app: orchestrator-rabbitmq
