federated-computation/orchestrator/orchestrator-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: orchestrator
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/enable-cors: 'true'
spec:
  rules:
    - host: fedcomp.eucaim.cancerimage.eu
      http:
        paths:
          - path: /orchestrator
            pathType: Prefix
            backend:
              service:
                name: orchestrator
                port:
                  number: 5000
