federated-computation/orchestrator/rabbitmq-admin-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: orchestrator-rabbitmq-admin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - rabbitmq-admin.orchestrator.fedcomp.eucaim.cancerimage.eu
      secretName: rabbitmq-admin.orchestrator.fedcomp.eucaim.cancerimage.eu
  rules:
    - host: rabbitmq-admin.orchestrator.fedcomp.eucaim.cancerimage.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orchestrator-rabbitmq-admin
                port:
                  number: 15672
