federated-computation/orchestrator/rabbitmq-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: orchestrator-rabbitmq
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  rules:
    - host: fedcomp-eucaim.grycap.i3m.upv.es
    # - host: fedcomp.eucaim.cancerimage.eu
      http:
        paths:
          - path: /orchestrator-rabbitmq/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: orchestrator-rabbitmq
                port:
                  number: 15672
